changed span to div in hopes of fixing render issues on mobile devices

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -31,7 +31,7 @@
             display: flex!important;
         }
 
-        span{
+        div{
             height: 3px;
             width: 100%;
             background-color: white;
